[package]
edition = "2021"
name = "bangumi"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt", "async"] }
napi-derive = "2.12.2"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json", "cookies"] }
scraper = "0.18.1"
tokio = { version = "1.33.0", features = ["full"] }

[build-dependencies]
napi-build = "2.0.1"